--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="description" content="____Description____">    
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width">  
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
 
     <script>
         // document.no-js -> document.js
