English as default language

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<!--[if lte IE 8]> <html class="no-js old-ie" lang="cs"> <![endif]-->
+<!--[if lte IE 8]> <html class="no-js old-ie" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" lang="cs">
+<html class="no-js" lang="en">
 <!--<![endif]-->
 
   <head>
