<main> element and skip link because of accessibility

--- a/index.html
+++ b/index.html
@@ -29,12 +29,19 @@
   
   <body>
 
+    <a href="#main">skip to main content</a>
+
     <div class="container">
+
+      <main id="main" class="content">
+
+        <h1>
+          Hello, I'm Blanka!<br>
+          Minimal HTML boilerplate.
+        </h1>
+        
+      </main><!-- /.content -->
       
-      <h1>
-        Hello, I'm Blanka!<br>
-        Minimal HTML boilerplate.
-      </h1>
 
     </div><!-- /.container -->
   
