Better accesibility of <main> with role=""

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="container">
 
-      <main id="main" class="content">
+      <main id="main" role="main" class="content">
 
         <h1>
           Hello, I'm Blanka!<br>
