Added English type test

--- a/type-test.cz.html
+++ b/type-test.cz.html
@@ -6,10 +6,10 @@
   <meta charset="utf-8">
 
   <title>
-    Stres test české typografie v jednom dokumentu
+    Stres test české typografie v jednom HTML dokumentu
   </title>
 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" type="text/css" href="">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,7 @@
 
     <main id="main" role="main" class="content">
 
-        <h1>Stres test české typografie. V jednom dokumentu</h1>
+        <h1>Stres test české typografie. V jednom HTML dokumentu</h1>
 
         <p>
           Lorem ipsum až mlze kohoutku něj, světový z postupující, nim do ovládá je směr organizace nějaké u matriarchálně jasně v řádu slabí ztěžuje, jim i mj. zvládnete někdy k zelené, čím 5300 m n.m. všeobecně bílý, a o tezi z tak světlých se napětí mozek. Rozmachu listopadovém podobný teď. Spešl díky pro <a href="http://cs.blabot.net/">Blábot</a>.
