Type test: added Normalize.css

--- a/type-test.cz.html
+++ b/type-test.cz.html
@@ -7,11 +7,11 @@
 
   <title>
     Stres test české typografie v jednom HTML dokumentu
-  </title>
-
-  <link rel="stylesheet" type="text/css" href="">
+  </title>  
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/necolas/normalize.css/1da0911d/normalize.css">
 
 
 </head>
