--- a/type-test.en.html
+++ b/type-test.en.html
@@ -9,10 +9,9 @@
     English typography HTML stress test
   </title>
 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/necolas/normalize.css/1da0911d/normalize.css">
 
 </head>
 
