--- a/type-test.cz.html
+++ b/type-test.cz.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/necolas/normalize.css/1da0911d/normalize.css">
+  <link rel="stylesheet" type="text/css" href="blanka.css">
 
 
 </head>
