Type test: Better reading options

--- a/blanka-type-test.cz.html
+++ b/blanka-type-test.cz.html
@@ -14,6 +14,14 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/necolas/normalize.css/1da0911d/normalize.css">
   <link rel="stylesheet" type="text/css" href="blanka.css">
 
+  <style>
+    /* Better reading options */
+    .content {
+      padding: 1.5em;
+      margin: 0 auto;
+      max-width: 30em;
+    }
+  </style>
 
 </head>
 
