Type test: multiple lines for heading etc. in english version

--- a/blanka-type-test.html
+++ b/blanka-type-test.html
@@ -41,14 +41,21 @@
           <h2>This document shows various HTML elements. We test whether the typography settings solves all their combinations</h2>
 
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit Lorem ipsum dolor sit amet, volutpat. </p>
+
           <h2>This is 2nd level heading bh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi luptatum zzril delenit Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam no</h2>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
-          <h3>This is 3rd level heading</h3>
 
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
-          <h4>This is 4th level heading</h4>
+
+          <h3>This is 3rd level heading. Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h3>
+
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
-          <h5>This is 5th level heading</h5>
+
+          <h4>This is 4th level heading.Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h4>
+
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+
+          <h5>This is 5th level heading. Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h5>
+
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
           <h6>This is 6th level heading</h6>
 
@@ -62,15 +69,28 @@
 
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim zzril delenit Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 
+        <p>
+          <small>
+            This is paragraph inside <code>small</code>. Ut wisi enim zzril delenit Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+          </small>
+        </p>          
+
           <div>This is a <code>div</code> element. Lorem ipsum dolor sit amet, elit, sed diam nonummy nibh euismod tincidunt ut consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. (End of <code>div</code>.)</div>
 
-          <blockquote>
-            <p>This is a block quotation containing a <em>single</em> paragraph. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></blockquote>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus maiores maxime, quod ab! Officiis, quidem incidunt. Reprehenderit perspiciatis, atque temporibus eveniet alias architecto voluptate numquam eligendi. Nulla totam, veritatis similique.
+          </p>
 
+          <blockquote>
+            <p>This is a block <strong>quotation</strong> containing a <em>single</em> paragraph. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+          </blockquote>
 
           <p>The following contains address information about the author, in an <code>address</code>
           element.</p>
 
+          <p>Horizontal rule <code>hr</code> follows:</p>
+
+          <hr>
 
           <h2>Lists</h2>
 
@@ -96,7 +116,7 @@
             <li>Eight</li>
             <li>Nine</li>
             <li>Ten</li>
-
+            <li>Eleven</li>
           </ol>
 
           <p>This is a paragraph before a <strong>definition</strong> list (<code>dl</code>). In principle, such a list should consist of <em>terms</em> and associated definitions. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
@@ -307,14 +327,14 @@
 
           <p>This next bit shows that PREformatted text is working.</p>
 
-        <pre>1
-         2
-          3
-           4
-            5
-        </pre>
+<pre>1
+ 2
+  3
+   4
+    5
+</pre>
 
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+          <p>Lorem ipsum dolor sit 360° amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. UNESCO duis autem vel eum iriure dolor in hendrerit  1591 in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla € 5000 facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 
     </main><!-- /.content -->
 
