HTML - removed class from forms

--- a/blanka-type-test.cz.html
+++ b/blanka-type-test.cz.html
@@ -7,7 +7,7 @@
 
   <title>
     Stres test české typografie v jednom HTML dokumentu
-  </title>  
+  </title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -229,7 +229,7 @@
         <h2>Formuláře</h2>
 
 
-        <form class="form-horizontal" role="form">
+        <form role="form">
           <h3>Kontaktní formulář</h3>
           <label for="name">
             Jméno a příjmení
