--- a/blanka-type-test.html
+++ b/blanka-type-test.html
@@ -21,7 +21,7 @@
       margin: 0 auto;
       max-width: 30em;
     }
-  </style>  
+  </style>
 
 </head>
 
@@ -31,10 +31,10 @@
 
     <main id="main" role="main" class="content">
 
-          <h1>English typography stress test. In one HTML document</h1>    
+          <h1>English typography stress test. In one HTML document</h1>
 
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, non, facere incidunt aut expedita esse quod unde eveniet tenetur veritatis voluptatum id deleniti similique enim praesentium earum reprehenderit quidem amet. Based on 
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, non, facere incidunt aut expedita esse quod unde eveniet tenetur veritatis voluptatum id deleniti similique enim praesentium earum reprehenderit quidem amet. Based on
             <a href="https://developer.yahoo.com/yui/examples/">Yahoo's YUI test suite</a>.
           </p>
 
@@ -73,7 +73,7 @@
           <small>
             This is paragraph inside <code>small</code>. Ut wisi enim zzril delenit Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
           </small>
-        </p>          
+        </p>
 
           <div>This is a <code>div</code> element. Lorem ipsum dolor sit amet, elit, sed diam nonummy nibh euismod tincidunt ut consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. (End of <code>div</code>.)</div>
 
@@ -204,13 +204,13 @@
               <th>Finland</th>
               <td>337,030</td>
               <td>305,470</td>
-              <td>17,830,000</td>      
+              <td>17,830,000</td>
             </tr>
             <tr>
               <th>Iceland</th>
               <td>103,000</td>
               <td>100,250</td>
-              <td>5,230,000</td>     
+              <td>5,230,000</td>
             </tr>
             <tr>
               <th>Norway</th>
@@ -226,18 +226,18 @@
             </tr>
           </tbody>
           </table>
-          
+
 
           <h2>Forms</h2>
 
 
-          <form class="form-horizontal" role="form">
+          <form role="form">
             <h3>Contact form</h3>
             <label for="name">
               Name
             </label>
             <input type="text" id="name" placeholder="Name">
-            <br>    
+            <br>
             <label for="email">
               Email
             </label>
@@ -248,10 +248,10 @@
             </label>
             <textarea id="message" placeholder="Message"></textarea>
             <br>
-            <input type="checkbox">&nbsp;Send me a monthly newsletter 
+            <input type="checkbox">&nbsp;Send me a monthly newsletter
             <br>
             <button type="submit">Send</button>
-          </form>  
+          </form>
 
           <br><br>
 
