Blanka type test - fixed English in table summary

--- a/blanka-type-test.cz.html
+++ b/blanka-type-test.cz.html
@@ -184,46 +184,48 @@
 
         <p>Tabulka s caption. Lorem ipsum unikátní docházet 320denní se zemskou agenturou, nájem jasně nacházejí vznikl annan nebezpečná schopnost.</p>
 
-        <table summary="each row names a nordic country and specifies its total area and land area, in square kilometers">
+        <table summary="V řádcích tabulky jsou severské země a sloupečky popisují jejich celkovou plochu v metrech čtverečních, plochu připadající na pevninu a počet obyvatel">
           <caption>Název tabulky: Porovnání severských zemí </caption>
-          <tbody><tr>
-            <th>Země</th>
-            <th>Celková plocha m</th>
-            <th>Plocha země</th>
-            <th>Počet obyvatel</th>
-          </tr>
-          <tr>
-            <th>Dánsko</th>
-            <td>43 070</td>
-            <td>42 370</td>
-            <td>7 230 000</td>
-          </tr>
-          <tr>
-            <th>Finsko</th>
-            <td>337 030</td>
-            <td>305 470</td>
-            <td>17 830 000</td>
-          </tr>
-          <tr>
-            <th>Island</th>
-            <td>103,000</td>
-            <td>100,250</td>
-            <td>5 230 000</td>
-          </tr>
-          <tr>
-            <th>Norsko</th>
-            <td>324 220</td>
-            <td>307 860</td>
-            <td>18 200 000</td>
-          </tr>
-          <tr>
-            <th>Švédsko</th>
-            <td>449 964</td>
-            <td>410 928</td>
-            <td>28 570 000</td>
-          </tr>
-        </tbody>
+          <tbody>
+            <tr>
+              <th>Země</th>
+              <th>Celková plocha m²</th>
+              <th>Plocha země</th>
+              <th>Počet obyvatel</th>
+            </tr>
+            <tr>
+              <th>Dánsko</th>
+              <td>43 070</td>
+              <td>42 370</td>
+              <td>7 230 000</td>
+            </tr>
+            <tr>
+              <th>Finsko</th>
+              <td>337 030</td>
+              <td>305 470</td>
+              <td>17 830 000</td>
+            </tr>
+            <tr>
+              <th>Island</th>
+              <td>103,000</td>
+              <td>100,250</td>
+              <td>5 230 000</td>
+            </tr>
+            <tr>
+              <th>Norsko</th>
+              <td>324 220</td>
+              <td>307 860</td>
+              <td>18 200 000</td>
+            </tr>
+            <tr>
+              <th>Švédsko</th>
+              <td>449 964</td>
+              <td>410 928</td>
+              <td>28 570 000</td>
+            </tr>
+          </tbody>
         </table>
+
 
 
         <h2>Formuláře</h2>
