--- a/blanka-type-test-article.cz.html
+++ b/blanka-type-test-article.cz.html
@@ -11,6 +11,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/normalize.css">
   <link rel="stylesheet" href="blanka.css">
 
   <style>
