Fix typo in blanka-type-test.cz.html

--- a/blanka-type-test.cz.html
+++ b/blanka-type-test.cz.html
@@ -137,7 +137,7 @@
           <li> <acronym title="radio detecting and ranging">radar</acronym> (akronym; <code>acronym</code>)</li>
 
           <li> <cite>Origin of Species</cite> (citace; <code>cite</code>)</li>
-          <li> <code>a[i] = b[i] + c[i);</code> (kód; <code>code</code>)</li>
+          <li> <code>a[i] = b[i] + c[i];</code> (kód; <code>code</code>)</li>
 
           <li> A ještě <dfn>octet</dfn> is an entity consisting of eight bits
                (<code>dfn</code> markup used for the term being defined)</li>
